X11: Allow custom cursors larger than 64x64

BUG=591980

Change-Id: I9a16d9a27d909dc696b816ab96e9e154f06d5175
Reviewed-on: https://chromium-review.googlesource.com/1062209
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Thomas Anderson <thomasanderson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559251}
Former-commit-id: 7b12859a926df008c60d1a370312820a64f7b595